@@ -8,7 +8,7 @@
 # Misc config variables
 #
 
-BuildDate = 20080518
+BuildDate = 20080520
 
 Version = 1.0.0 RC5 OMEGA
 
