@@ -36,8 +36,8 @@ $tpl->assign(
 			'THEME_COLOR_PATH' => "../themes/$theme_color",
 			'THEME_CHARSET' => tr('encoding'),
 			'ISP_LOGO' => get_logo($_SESSION['user_id'])
-		)
-	);
+			)
+		);
 
 function gen_page_awstats(&$tpl) {
 	global $cfg;
