@@ -4,7 +4,7 @@
  *
  * @copyright 	2001-2006 by moleSoftware GmbH
  * @copyright 	2006-2008 by ispCP | http://isp-control.net
- * @version		$ID$
+ * @version		SVN: $ID$
  * @link 		http://isp-control.net
  * @author 		ispCP Team
  *
@@ -78,11 +78,11 @@ SQL_QUERY;
 
 function get_domain_running_sub_cnt(&$sql, $domain_id) {
 	$query = <<<SQL_QUERY
-        select
-            count(subdomain_id) as cnt
-        from
+        SELECT
+            COUNT(subdomain_id) AS cnt
+        FROM
             subdomain
-        where
+        WHERE
             domain_id = ?
 SQL_QUERY;
 
@@ -95,11 +95,11 @@ SQL_QUERY;
 
 function get_domain_running_als_cnt(&$sql, $domain_id) {
 	$query = <<<SQL_QUERY
-        select
-            count(alias_id) as cnt
-        from
+        SELECT
+            COUNT(alias_id) AS cnt
+        FROM
             domain_aliasses
-        where
+        WHERE
             domain_id = ?
 
 SQL_QUERY;
@@ -171,11 +171,11 @@ SQL_QUERY;
 
 function get_domain_running_dmn_ftp_acc_cnt(&$sql, $domain_id) {
 	$query = <<<SQL_QUERY
-        select
+        SELECT
             domain_name
-        from
+        FROM
             domain
-        where
+        WHERE
             domain_id = ?
 SQL_QUERY;
 
@@ -184,12 +184,12 @@ SQL_QUERY;
 	$dmn_name = $rs->fields['domain_name'];
 
 	$query = <<<SQL_QUERY
-        select
-            count(userid) as cnt
-        from
+        SELECT
+            COUNT(userid) AS cnt
+        FROM
             ftp_users
-        where
-            userid rlike ?
+        WHERE
+            userid RLIKE ?
 SQL_QUERY;
 
 	$rs = exec_query($sql, $query, array('@' . $dmn_name));
@@ -201,22 +201,22 @@ SQL_QUERY;
 
 function get_domain_running_sub_ftp_acc_cnt(&$sql, $domain_id) {
 	$query = <<<SQL_QUERY
-        select
+        SELECT
             subdomain_name
-        from
+        FROM
             subdomain
-        where
+        WHERE
             domain_id = ?
-        order by
+        ORDER BY
             subdomain_id
 SQL_QUERY;
 
 	$query2 = <<<SQL_QUERY
-        select
+        SELECT
             domain_name
-        from
+        FROM
             domain
-        where
+        WHERE
             domain_id = ?
 SQL_QUERY;
 
@@ -229,12 +229,12 @@ SQL_QUERY;
 		$sub_name = $rs->fields['subdomain_name'];
 
 		$query = <<<SQL_QUERY
-            select
-                count(userid) as cnt
-            from
+            SELECT
+                COUNT(userid) AS cnt
+            FROM
                 ftp_users
-            where
-                userid rlike ?
+            WHERE
+                userid RLIKE ?
 SQL_QUERY;
 
 		$rs_cnt = exec_query($sql, $query, array('@' . $sub_name . '.' . $dmn->fields['domain_name']));
@@ -249,13 +249,13 @@ SQL_QUERY;
 
 function get_domain_running_als_ftp_acc_cnt(&$sql, $domain_id) {
 	$query = <<<SQL_QUERY
-        select
+        SELECT
             alias_name
-        from
+        FROM
             domain_aliasses
-        where
+        WHERE
             domain_id = ?
-        order by
+        ORDER BY
             alias_id
 SQL_QUERY;
 
@@ -267,12 +267,12 @@ SQL_QUERY;
 		$als_name = $rs->fields['alias_name'];
 
 		$query = <<<SQL_QUERY
-            select
-                count(userid) as cnt
-            from
+            SELECT
+                COUNT(userid) AS cnt
+            FROM
                 ftp_users
-            where
-                userid rlike ?
+            WHERE
+                userid RLIKE ?
 SQL_QUERY;
 
 		$rs_cnt = exec_query($sql, $query, array('@' . $als_name));
@@ -300,11 +300,11 @@ function get_domain_running_ftp_acc_cnt(&$sql, $domain_id) {
 
 function get_domain_running_sqld_acc_cnt(&$sql, $domain_id) {
 	$query = <<<SQL_QUERY
-        select
-            count(sqld_id) as cnt
-        from
+        SELECT
+            COUNT(sqld_id) AS cnt
+        FROM
             sql_database
-        where
+        WHERE
             domain_id = ?
 SQL_QUERY;
 
@@ -317,13 +317,13 @@ SQL_QUERY;
 
 function get_domain_running_sqlu_acc_cnt(&$sql, $domain_id) {
 	$query = <<<SQL_QUERY
-        select distinct
+        SELECT DISTINCT
             t1.sqlu_name
-        from
-            sql_user as t1, sql_database as t2
-        where
+        FROM
+            sql_user AS t1, sql_database AS t2
+        WHERE
             t2.domain_id = ?
-          and
+          AND
             t2.sqld_id = t1.sqld_id
 SQL_QUERY;
 
@@ -410,13 +410,13 @@ function gen_client_mainmenu(&$tpl, $menu_file) {
 		);
 
 	$query = <<<SQL_QUERY
-        select
+        SELECT
             *
-        from
+        FROM
             custom_menus
-        where
+        WHERE
             menu_level = 'user'
-          or
+          OR
             menu_level = 'all'
 SQL_QUERY;
 
@@ -468,10 +468,15 @@ SQL_QUERY;
 		$tpl->assign('ISACTIVE_SUPPORT', '');
 	}
 
-	if ($cfg['AWSTATS_ACTIVE'] == "no") {
-		$tpl->assign('ISACTIVE_AWSTATS', '');
+	if ($cfg['AWSTATS_ACTIVE'] != 'yes') {
+		$tpl->assign('ACTIVE_AWSTATS', '');
 	} else {
-		$tpl->assign('AWSTSTS', 'http://' . $_SERVER['HTTP_HOST'] . '/stats');
+		$tpl->assign(
+			array(
+				'AWSTATS_PATH' => 'http://' . $_SESSION['user_logged'] . '/stats/',
+				'AWSTATS_TARGET' => '_blank'
+				)
+			);
 	}
 
 	$tpl->parse('MAIN_MENU', 'menu');
@@ -530,13 +535,13 @@ function gen_client_menu(&$tpl, $menu_file) {
 		);
 
 	$query = <<<SQL_QUERY
-        select
+        SELECT
             *
-        from
+        FROM
             custom_menus
-        where
+        WHERE
             menu_level = 'user'
-          or
+          OR
             menu_level = 'all'
 SQL_QUERY;
 
@@ -559,7 +564,8 @@ SQL_QUERY;
 			}
 
 			$tpl->assign(
-				array('BUTTON_LINK' => $menu_link,
+				array(
+					'BUTTON_LINK' => $menu_link,
 					'BUTTON_NAME' => $menu_name,
 					'BUTTON_TARGET' => $menu_target,
 					'BUTTON_ID' => $i,
@@ -575,10 +581,15 @@ SQL_QUERY;
 		$tpl->assign('SUPPORT_SYSTEM', '');
 	}
 
-	if ($cfg['AWSTATS_ACTIVE'] == "no") {
-		$tpl->assign('AWSTSTS', '');
+	if ($cfg['AWSTATS_ACTIVE'] != 'yes') {
+		$tpl->assign('ACTIVE_AWSTATS', '');
 	} else {
-		$tpl->assign('AWSTSTS', 'http://' . $_SERVER['HTTP_HOST'] . '/stats');
+		$tpl->assign(
+			array(
+				'AWSTATS_PATH' => 'http://' . $_SESSION['user_logged'] . '/stats/',
+				'AWSTATS_TARGET' => '_blank'
+				)
+			);
 	}
 
 	$tpl->parse('MENU', 'menu');
@@ -586,11 +597,11 @@ SQL_QUERY;
 
 function get_user_domain_id(&$sql, $user_id) {
 	$query = <<<SQL_QUERY
-        select
+        SELECT
             domain_id
-        from
+        FROM
             domain
-        where
+        WHERE
             domain_admin_id = ?
 SQL_QUERY;
 
@@ -629,7 +640,7 @@ function user_goto($dest) {
 function count_sql_user_by_name(&$sql, $sqlu_name) {
 	$query = <<<SQL_QUERY
 		SELECT
-			COUNT(sqlu_id) as cnt
+			COUNT(sqlu_id) AS cnt
 		FROM
 			sql_user
 		WHERE
@@ -644,16 +655,16 @@ SQL_QUERY;
 function sql_delete_user(&$sql, $dmn_id, $db_user_id) {
 	// let's get sql user common data;
 	$query = <<<SQL_QUERY
-         select
+         SELECT
             t1.sqld_id, t1.sqlu_name, t2.sqld_name, t1.sqlu_name
-         from
-            sql_user as t1,
-            sql_database as t2
-         where
+         FROM
+            sql_user AS t1,
+            sql_database AS t2
+         WHERE
             t1.sqld_id = t2.sqld_id
-           and
+           AND
             t2.domain_id = ?
-           and
+           AND
             t1.sqlu_id = ?
 SQL_QUERY;
 
@@ -673,46 +684,46 @@ SQL_QUERY;
 		$db_id = $rs->fields['sqld_id'];
 		// revoke grants on global level, if any;
 		$query = <<<SQL_QUERY
-        	revoke all on *.* from ?@'%'
+        	REVOKE ALL ON *.* FROM ?@'%'
 SQL_QUERY;
 		$rs = exec_query($sql, $query, array($db_user_name));
 		$query = <<<SQL_QUERY
-		revoke all on *.* from ?@localhost
+			REVOKE ALL ON *.* FROM ?@localhost
 SQL_QUERY;
 		$rs = exec_query($sql, $query, array($db_user_name));
 		// delete user record from mysql.user table;
 		$query = <<<SQL_QUERY
-       	 delete from
+       	 DELETE FROM
         	    mysql.user
-       	 where
-         	   Host = '%'
-         and
-          	  User = ?
+       	 WHERE
+         		Host = '%'
+           AND
+				User = ?
 SQL_QUERY;
 		$rs = exec_query($sql, $query, array($db_user_name));
 
 		$query = <<<SQL_QUERY
-	delete from
-		mysql.user
-	where
-		Host = 'localhost'
-	and
-		User = ?
+			DELETE FROM
+				mysql.user
+			WHERE
+				Host = 'localhost'
+			  AND
+				User = ?
 SQL_QUERY;
 		$rs = exec_query($sql, $query, array($db_user_name));
 		// flush privileges.
 		$query = <<<SQL_QUERY
-        	flush privileges
+        	FLUSH PRIVILEGES;
 SQL_QUERY;
 		$rs = exec_query($sql, $query, array());
 	} else {
 		$new_db_name = str_replace("_", "\\_", $db_name);
 		$query = <<<SQL_QUERY
-       	 	revoke all on $new_db_name.* from ?@'%'
+       	 	REVOKE ALL ON $new_db_name.* FROM ?@'%'
 SQL_QUERY;
 		$rs = exec_query($sql, $query, array($db_user_name));
 		$query = <<<SQL_QUERY
-		revoke all on $new_db_name.* from ?@localhost
+			REVOKE ALL ON $new_db_name.* FROM ?@localhost
 SQL_QUERY;
 		$rs = exec_query($sql, $query, array($db_user_name));
 	}
@@ -722,25 +733,21 @@ function check_permissions(&$tpl) {
 	if (isset($_SESSION['sql_support']) && $_SESSION['sql_support'] == "no") {
 		$tpl->assign('SQL_SUPPORT', '');
 	}
-
 	if (isset($_SESSION['email_support']) && $_SESSION['email_support'] == "no") {
 		$tpl->assign('ADD_EMAIL', '');
 	}
-
 	if (isset($_SESSION['subdomain_support']) && $_SESSION['subdomain_support'] == "no") {
 		$tpl->assign('SUBDOMAIN_SUPPORT', '');
 	}
 	if (isset($_SESSION['alias_support']) && $_SESSION['alias_support'] == "no") {
 		$tpl->assign('DOMAINALIAS_SUPPORT', '');
 	}
-
 	if (isset($_SESSION['subdomain_support']) && $_SESSION['subdomain_support'] == "no") {
 		$tpl->assign('SUBDOMAIN_SUPPORT_CONTENT', '');
 	}
 	if (isset($_SESSION['alias_support']) && $_SESSION['alias_support'] == "no") {
 		$tpl->assign('DOMAINALIAS_SUPPORT_CONTENT', '');
 	}
-
 	if (isset($_SESSION['alias_support']) && $_SESSION['alias_support'] == "no" && isset($_SESSION['subdomain_support']) && $_SESSION['subdomain_support'] == "no") {
 		$tpl->assign('DMN_MNGMNT', '');
 	}
@@ -775,13 +782,13 @@ function check_ftp_perms($sql, $ftp_acc) {
 
 function delete_sql_database(&$sql, $dmn_id, $db_id) {
 	$query = <<<SQL_QUERY
-        select
-            sqld_name as db_name
-        from
+        SELECT
+            sqld_name AS db_name
+        FROM
             sql_database
-        where
+        WHERE
             domain_id = ?
-          and
+          AND
             sqld_id = ?
 SQL_QUERY;
 
@@ -794,17 +801,17 @@ SQL_QUERY;
 	$db_name = quoteIdentifier($rs->fields['db_name']);
 	// have we any users assigned to this database;
 	$query = <<<SQL_QUERY
-        select
-            t2.sqlu_id as db_user_id,
-            t2.sqlu_name as db_user_name
-        from
-            sql_database as t1,
-            sql_user as t2
-        where
+        SELECT
+            t2.sqlu_id AS db_user_id,
+            t2.sqlu_name AS db_user_name
+        FROM
+            sql_database AS t1,
+            sql_user AS t2
+        WHERE
             t1.sqld_id = t2.sqld_id
-          and
+          AND
             t1.domain_id = ?
-          and
+          AND
             t1.sqld_id = ?
 SQL_QUERY;
 
@@ -823,21 +830,21 @@ SQL_QUERY;
 	}
 	// drop desired database;
 	$query = <<<SQL_QUERY
-        drop database
+        DROP DATABASE;
 SQL_QUERY;
 
 	$query .= $db_name;
 
 	$rs = exec_query($sql, $query, array());
 
-	write_log($_SESSION['user_logged'] . ": deletes SQL database: " . $db_name);
+	write_log($_SESSION['user_logged'] . ": delete SQL database: " . $db_name);
 	// delete desired database from the ispcp sql_database table;
 	$query = <<<SQL_QUERY
-        delete from
+        DELETE FROM
             sql_database
-        where
+        WHERE
             domain_id = ?
-          and
+          AND
             sqld_id = ?
 SQL_QUERY;
 
